k8s/raymon-core.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: raymon-backend
    raymon.service: raymon-api
  name: raymon-api
spec:
  ports:
    - name: default
      port: 5000
      targetPort: 5000
  selector:
    raymon.service: raymon-api
  type: NodePort
---
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: raymon-backend
    raymon.service: raymon-db
  name: raymon-db
spec:
  ports:
    - name: "5432"
      port: 5432
      targetPort: 5432
  selector:
    raymon.service: raymon-db
status:
  loadBalancer: {}
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: raymon-backend
    raymon.service: raymon-api
  name: raymon-api
spec:
  replicas: 1
  selector:
    matchLabels:
      raymon.service: raymon-api
  strategy:
    rollingUpdate:
      maxSurge: 100%
      maxUnavailable: 0%
  template:
    metadata:
      labels:
        raymon.service: raymon-api
    spec:
      containers:
        - env:
            - name: RAYMON_MGMT_URL
              value: https://mgmt.raymon.cloud
            - name: RAYMON_MGMT_API_CLIENT_ID
              value: ppnbcqT6gTEzM3aSxbRGAR9N3G1n5agT
            - name: RAYMON_MGMT_API_CLIENT_SECRET
              value: raymon-mgmt-api-secret
            - name: RAYMON_MGMT_API_AUDIENCE
              value: raymon-mgmt-api
            - name: RAYMON_API_AUDIENCE
              value: raymon-backend-api
            - name: RAYMON_AUTH0_URL
              value: https://raymon.eu.auth0.com
            - name: PYTHONUNBUFFERED
              value: "1"
            - name: SECRET_PATH
              value: /etc/secret-volume
            - name: RAYMONDB_HOST
              value: raymon-db
            - name: RAYMONDB_PORT
              value: "5432"
            - name: RAYMONDB_DB
              value: raymon
            - name: RAYMONDB_USER
              value: postgres
            - name: RAYMONDB_PASSWORD_SECRET
              value: raymondb-password
          image: raymonteam/raymon_api:0.0.45
          imagePullPolicy: ""
          name: raymon-api
          ports:
            - containerPort: 5000
          volumeMounts:
            - mountPath: /etc/secret-volume
              name: raymon-secret
      restartPolicy: Always
      volumes:
        - name: raymon-secret
          secret:
            secretName: raymon-secret
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    raymon.service: raymon-triggergen
  name: raymon-triggergen
spec:
  replicas: 1
  selector:
    matchLabels:
      raymon.service: raymon-triggergen
  strategy: {}
  template:
    metadata:
      labels:
        app: raymon-backend
        raymon.service: raymon-triggergen
    spec:
      containers:
        - env:
            - name: PYTHONUNBUFFERED
              value: "1"
            - name: SECRET_PATH
              value: /etc/secret-volume
            - name: RAYMONDB_HOST
              value: raymon-db
            - name: RAYMONDB_PORT
              value: "5432"
            - name: RAYMONDB_DB
              value: raymon
            - name: RAYMONDB_USER
              value: postgres
            - name: RAYMONDB_PASSWORD_SECRET
              value: raymondb-password
            - name: API_HOST
              value: raymon-api
            - name: API_PORT
              value: "5000"
          image: raymonteam/raymon-triggergen:0.0.45
          imagePullPolicy: ""
          name: raymon-triggergen
          volumeMounts:
            - mountPath: /etc/secret-volume
              name: raymon-secret
      restartPolicy: Always
      volumes:
        - name: raymon-secret
          secret:
            secretName: raymon-secret
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: raymon-db
spec:
  replicas: 1
  selector:
    matchLabels:
      raymon.service: raymon-db
  serviceName: service-name
  template:
    metadata:
      labels:
        app: raymon
        raymon.service: raymon-db
    spec:
      containers:
        - env:
            - name: SECRET_PATH
              value: /etc/secret-volume
            - name: PGDATA
              value: /var/lib/postgresql/data/pgdata
            - name: POSTGRES_DB
              value: raymon
            - name: POSTGRES_USER
              value: postgres
            - name: POSTGRES_PASSWORD_FILE
              value: /etc/secret-volume/raymondb-password
          image: raymonteam/raymon_db:0.0.45
          imagePullPolicy: ""
          name: raymon-db
          ports:
            - containerPort: 5432
          securityContext:
            runAsUser: 0
          volumeMounts:
            - mountPath: /var/lib/postgresql/data
              name: raymon-db-pvc
            - mountPath: /etc/secret-volume
              name: raymon-secret
      volumes:
        - name: raymon-secret
          secret:
            secretName: raymon-secret
        - name: raymon-db-pvc
          persistentVolumeClaim:
            claimName: raymon-db-pvc
  updateStrategy:
    type: RollingUpdate
