k8s/ingress-gcp.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  annotations:
    # For GCP
    kubernetes.io/ingress.allow-http: "false"
    kubernetes.io/ingress.global-static-ip-name: raymon-staging-ip
    networking.gke.io/managed-certificates: raymon-certificate
  labels:
    app: raymon-backend
  name: raymon-api-ingress
spec:
  rules:
    # Replace with your domain(s)
    - host: api.raymon.ai
      http:
        paths:
          - path: /v0/*
            pathType: ImplementationSpecific
            backend:
              service:
                name: raymon-api
                port:
                  number: 5000
